nextjs/src/app/text.css
@tailwind base;
@tailwind components;

/**
* @description Handles styling of the markdown text.tsx component.
* @see src/components/text.tsx
* 
* @layer components is for utility classes that are specific to a component.
* @layer components makes sure that other tailwind classes still take precedence when passed to the component which has a components class.
*/
@layer components {
    .markdown-text {
        @apply font-sans font-normal;
        @apply text-20 lg:text-18;
        @apply leading-7.5 lg:leading-6.5;
        @apply text-paragraph-primary;

        /**
        * The following identifiers have more specificity than above.
        */
        h1,
        h2,
        h3 {
            @apply font-light tracking-tight text-title-primary mb-4 lg:mb-8;

            b,
            strong {
                @apply font-semibold;
            }
        }

        h1 {
            @apply text-35 lg:text-50 leading-9 lg:leading-13;
        }

        h2 {
            @apply text-35 lg:text-40 leading-9 lg:leading-11;
        }

        h3 {
            @apply text-30 leading-7.5 lg:leading-10;
        }

        ol {
            @apply list-decimal pl-[18px] lg:pl-3.5 list-outside;

            li {
                @apply pl-2 lg:pl-3;
            }
        }

        ul {
            @apply list-disc pl-3;

            li {
                /*specific for ol*/
                @apply pl-3;
            }

            li {
                /** on light backgrounds, chevron itself is darker */
                list-style-image: url('/svg/chevron-right-light.svg');
            }
        }

        /**
        * Equal spacing between nested li elements
        */
        li {

            ul,
            ol {
                @apply mt-2 lg:mt-4;
            }

            &:not(:last-child) {
                @apply mb-2 lg:mb-4;
            }
        }

        b,
        strong {
            @apply font-semibold;
        }

        a {
            @apply underline hover:text-title-primary;
        }

        blockquote {
            @apply border-l-4 border-quote-primary pl-4;
        }

        ul+p {
            @apply mt-4;
        }

        p, pre {
            &:not(:last-child) {
                @apply mb-4;
            }
        }
        & code {
            @apply text-18 lg:text-16;
        }
        p > code {
            @apply bg-stone/10 px-1 py-0.5 rounded-md;
        }
    }

    /** on dark backgrounds, chevron itself is lighter */
    [data-scheme='dark'] {
        .markdown-text ul li {
            list-style-image: url('/svg/chevron-right-dark.svg');
        }
        .markdown-text p > code {
            @apply bg-neutral/80 text-stone;
        }
    }

    .markdown-text-image {
        img {
            @apply w-full h-auto relative mx-auto rounded-2xl overflow-hidden;
        }
    }
}

